# dataset_analisis

./: .gitignore  README.md  analizar_series.py  generar_dataframe_categorias.py  main.py  pyproject.toml  requirements.txt
docs/: COMANDOS_PYTHON.md  ESTRUCTURA_PROYECTO.md  README_GITHUB.md  README_MODULAR.md  TESTING.md
notebooks/: analisis.ipynb
notebooks/.ipynb_checkpoints/: analisis_exploratorio-checkpoint.ipynb
scripts/: __init__.py  crear_datos_ejemplo.py  generar_dataframe_categorias.py  run_tests.py
src/: __init__.py  analizar_series.py  config.py  utils.py
src/reportes/: __init__.py  generador_reportes.py  utils_reportes.py
src/reportes/templates/: template_pdf.html
tests/: __init__.py  conftest.py  test_analizar_series.py  test_config.py  test_reportes.py  test_utils.py
visualizations/: comparison.py  dashboard.py  dashboard_modular.py
visualizations/callbacks/: __init__.py  chart_callbacks.py  export_callbacks.py
visualizations/components/: __init__.py  charts.py  controls.py  header.py  metrics.py
visualizations/utils/: __init__.py  data_loader.py
